--- a/index/index.html
+++ b/index/index.html
@@ -21,6 +21,22 @@
             </nav>
             <button class="btn-signing">SIGNING</button>
         </header>
+        <main>
+
+            <div class="content">
+                <div class="tag-box">
+                    <div class="tag">INTRUCTING &wedbar; </div>
+                </div>
+                <h1>EMAIL FOR <br>DEVELOPERS</h1>
+                <p class="description">
+                    Welcome to my first project with 3D CSS
+                </p>
+                <div class="buttons">
+                    <a href="#" class="btn-get-started">Documentation &gt;</a>
+                    <a href="#" class="btn-singing-main">Getstarted &gt;</a>
+                </div>
+            </div>
+        </main>
     </div>
 </body>
 </html>
