--- a/index/index.html
+++ b/index/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
     <img class="image-gradient" src="../img/gradient.png" alt="gradient">
@@ -12,31 +13,50 @@
 
     <div class="container">
         <header>
-            <h1 class="logo">NHATTIN</h1>
+            <h1 data-aos="fade-down" data-aos-duration="1500" class="logo">NHATTIN</h1>
             <nav>
-                <a href="#">INFOR</a>
-                <a href="#">FEATURES</a>
-                <a href="#">RESOURCES</a>
-                <a href="#">DOCS</a>
+                <a data-aos="fade-down" data-aos-duration="1500" href="#">INFOR</a>
+                <a data-aos="fade-down" data-aos-duration="2000" href="#">FEATURES</a>
+                <a data-aos="fade-down" data-aos-duration="2500" href="#">RESOURCES</a>
+                <a data-aos="fade-down" data-aos-duration="3000" href="#">DOCS</a>
             </nav>
-            <button class="btn-signing">SIGNING</button>
+            <button data-aos="fade-down" data-aos-duration="1500" class="btn-signing">SIGNING</button>
         </header>
         <main>
 
             <div class="content">
                 <div class="tag-box">
-                    <div class="tag">INTRUCTING &wedbar; </div>
+                    <div data-aos="fade-zoom-in"
+                    data-aos-easing="ease-in-back"
+                    data-aos-delay="300"
+                    data-aos-offset="0" data-aos-duration="1500" class="tag">INTRUCTING &wedbar; </div>
                 </div>
-                <h1>EMAIL FOR <br>DEVELOPERS</h1>
-                <p class="description">
+                <h1 data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="1500" >EMAIL FOR <br>DEVELOPERS</h1>
+                <p data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="1500"  class="description">
                     Welcome to my first project with 3D CSS
                 </p>
-                <div class="buttons">
+                <div data-aos="fade-zoom-in"
+                data-aos-easing="ease-in-back"
+                data-aos-delay="300"
+                data-aos-offset="0" data-aos-duration="3000"  class="buttons">
                     <a href="#" class="btn-get-started">Documentation &gt;</a>
                     <a href="#" class="btn-singing-main">Getstarted &gt;</a>
                 </div>
             </div>
         </main>
+        <spline-viewer class="robot-3d" url="https://prod.spline.design/hBbUXApQCUlGOoHY/scene.splinecode"></spline-viewer>
+
     </div>
+    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.11.5/build/spline-viewer.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 </body>
 </html>
